[package]
name = "ovit-fuse"
version = "0.0.0-development"
authors = ["Kepler Sticka-Jones <kepler@stickajones.org>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
fuse_mt = "0.5.0"
time = "0.2.4"
rayon = "1.3.0"
ovit = { path = "../ovit" }
tivo-media-file-system = { path = "../tivo-media-file-system" }