[package]
name = "ovit-fuse"
version = "0.0.0-development"
authors = ["Kepler Sticka-Jones <kepler@stickajones.org>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
fuse_mt = "0.5.0"
time = "0.1.42"
rayon = "1.3.0"
ovit = { path = "../ovit" }
tivo-media-file-system = { path = "../tivo-media-file-system" }
log = "0.4"
env_logger = "0.8.2"
