[package]
name = "ovit-util"
version = "0.0.0-development"
authors = ["Kepler Sticka-Jones <kepler@stickajones.org>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
rayon = "1.2.0"
apple-partition-map = { path = "../apple-partition-map" }
ovit-lib = { path = "../ovit-lib" }
tivo-media-file-system = { path = "../tivo-media-file-system" }