[package]
name = "tivo-media-file-system"
version = "0.0.0-development"
authors = ["Kepler Sticka-Jones <kepler@stickajones.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.1.0"
chrono = "0.4.11"
apple-partition-map = { path = "../apple-partition-map" }
ovit-util = { path = "../ovit-util" }
log = "0.4"